--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -7,6 +7,41 @@
 
     <ScrollView>
         <VerticalStackLayout>
+
+            <Label Text="{x:Static resources:TripsResources.Weather}" FontSize="25" FontAttributes="Bold" Margin="0,20,0,0" VerticalOptions="Center" HorizontalOptions="Center" />
+          <!--  <Frame Margin="10" VerticalOptions="Center" HorizontalOptions="Center" >
+                <HorizontalStackLayout Spacing="65" VerticalOptions="Center" HorizontalOptions="Center"  >
+                    <ImageButton Source="temperature.svg" WidthRequest="30" HeightRequest="30"/>
+                    <ImageButton Source="wind.svg" WidthRequest="30" HeightRequest="30"/>
+                    <ImageButton Source="humidity.svg" WidthRequest="30" HeightRequest="30"/>
+                    <ImageButton Source="weather.svg" WidthRequest="30" HeightRequest="30"/>
+                </HorizontalStackLayout>
+            </Frame>-->
+
+            <Frame Margin="10" VerticalOptions="Center" HorizontalOptions="Center">
+                <HorizontalStackLayout Spacing="65" VerticalOptions="Center" HorizontalOptions="Center">
+                    <StackLayout>
+                        <ImageButton Source="temperature.svg" WidthRequest="30" HeightRequest="30" />
+                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" TextColor="Black" />
+                    </StackLayout>
+                    <StackLayout>
+                        <ImageButton Source="wind.svg" WidthRequest="30" HeightRequest="30" />
+                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"  TextColor="Black"  />
+                    </StackLayout>
+                    <StackLayout>
+                        <ImageButton Source="humidity.svg" WidthRequest="30" HeightRequest="30" />
+                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"  TextColor="Black"  />
+                    </StackLayout>
+                    <StackLayout>
+                        <ImageButton Source="weather.svg" WidthRequest="30" HeightRequest="30" />
+                        <Label Text="12" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"  TextColor="Black"  />
+                    </StackLayout>
+                </HorizontalStackLayout>
+            </Frame>
+
+
+
+
             <StackLayout BindableLayout.ItemsSource="{Binding Itinerary}">
                 <BindableLayout.ItemTemplate>
                     <DataTemplate>
