--- a/Travely.Client/Pages/TripsPage.xaml
+++ b/Travely.Client/Pages/TripsPage.xaml
@@ -25,7 +25,7 @@
                                 <Grid Grid.Column="0" >
                                     <Image Source="{Binding CountryURL}" Aspect="AspectFill"/>
                                     <StackLayout Margin="10">
-                                        <Label Text="{Binding TripTitle}" FontAttributes="Bold" FontSize="14" Margin="100,10,0,0"/>
+                                        <Label Text="{Binding TripTitle}" FontAttributes="Bold" FontSize="18" HorizontalOptions="Center" VerticalOptions="Center"/>
                                         <Image Source="adventure_logo"  WidthRequest="150" HeightRequest="130"  Margin="50,-10,0,0" Grid.RowSpan="3" Grid.Column="0" />
                                         <StackLayout Grid.Column="1" VerticalOptions="Center" Margin="10,0,0,0">
                                             <Grid>
@@ -78,11 +78,10 @@
                 Text="{x:Static resources:TripsResources.StartPlanningButton}" 
                 BackgroundColor="Black" 
                 HeightRequest="45" 
-                WidthRequest="340" Margin="20,20,20,0"
+                WidthRequest="340" 
                 Grid.Row="0"
                 Grid.Column="1"
-                HorizontalOptions="End" 
-                VerticalOptions="Start" 
+                HorizontalOptions="Center" VerticalOptions="Center"
                 Clicked="StartPlanning"/>
         </VerticalStackLayout>
     </ScrollView>
