--- a/Travely.Client/Pages/TripPackingPage.xaml
+++ b/Travely.Client/Pages/TripPackingPage.xaml
@@ -10,31 +10,38 @@
 
     <ScrollView>
         <VerticalStackLayout Spacing="10">
+            <Image Source="pack_image" HorizontalOptions="Center" WidthRequest="150" HeightRequest="130" Margin="0,20,0,0" />
             <Grid Margin="20,10,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <Entry 
-                    Grid.Column="0"
-                    x:Name="PackingItemEntry"
-                    Placeholder="{x:Static resources:TripPackingResources.EnterNewItem}" 
-                    Text="{Binding PackingItem}"
-                    Margin="0,10"
-                    BackgroundColor="#F0F0F0"
-                    TextColor="#333"
-                    FontSize="18"
-                    />
+                <Frame BorderColor="Black" CornerRadius="5" Padding="0" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="350"  Margin="0,0,20,0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
 
-                <ImageButton 
-                    Grid.Column="1"
-                    Source="add.png"
-                    Command="{Binding AddItemCommand}"
-                    WidthRequest="100" HeightRequest="50" 
-                    Margin="0,10,0,10"
-                    />
+                        
+                        <Entry Grid.Column="0"
+                          x:Name="PackingItemEntry"
+                          Placeholder="{x:Static resources:TripPackingResources.EnterNewItem}" 
+                          Text="{Binding PackingItem}"
+                          TextColor="#333"
+                          Margin="10,0,0,0"
+                          />
+
+                        <ImageButton Grid.Column="1"
+                         Source="add_basket.png"
+                         Command="{Binding AddItemCommand}"
+                         WidthRequest="30" HeightRequest="30" 
+                         Margin="0,10,10,10" />
+                    </Grid>
+                </Frame>
             </Grid>
+
 
             <CollectionView ItemsSource="{Binding PackingItems}">
                 <CollectionView.ItemTemplate>
@@ -48,11 +55,11 @@
 
                             <CheckBox 
                                 Grid.Column="0"
-                                Color="Green"
+                                Color="Black"
                                 Margin="10,0,0,0"
                                 IsChecked="{Binding IsPacked}" />
 
-                            <Entry 
+                            <Label
                                 Grid.Column="1"
                                 Text="{Binding Title}"
                                 TextColor="#555"
@@ -61,7 +68,7 @@
 
                             <ImageButton 
                                 Grid.Column="2"
-                                Source="x.png"
+                                Source="delete.png"
                                 WidthRequest="20" HeightRequest="20" 
                                 BackgroundColor="Transparent" 
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.DeleteItemCommand}"
