Added logic to change the is packed property for packing items

--- a/Travely.Client/Pages/TripPackingPage.xaml
+++ b/Travely.Client/Pages/TripPackingPage.xaml
@@ -57,6 +57,7 @@
                                 Grid.Column="0"
                                 Color="Black"
                                 Margin="10,0,0,0"
+                                CheckedChanged="IsPackedChanged"
                                 IsChecked="{Binding IsPacked}" />
 
                             <Label
