Added packing item validations

--- a/Travely.Client/Pages/TripPackingPage.xaml
+++ b/Travely.Client/Pages/TripPackingPage.xaml
@@ -42,6 +42,10 @@
                 </Frame>
             </Grid>
 
+            <Label Text="{Binding ErrorMessage}"
+                   TextColor="Red"
+                   FontSize="14"
+                   IsVisible="{Binding ErrorMessage, Converter={StaticResource StringNotNullOrEmptyConverter}}" />
 
             <CollectionView ItemsSource="{Binding PackingItems}">
                 <CollectionView.ItemTemplate>
