--- a/Travely.Client/Pages/EditTripPage.xaml
+++ b/Travely.Client/Pages/EditTripPage.xaml
@@ -154,6 +154,12 @@
                 </StackLayout>
             </Frame>
 
+            <Label Text="{Binding AlertMessage}"
+                TextColor="Red"
+                FontSize="14"
+                Margin="20,0,20,10"
+                IsVisible="{Binding AlertMessage, Converter={StaticResource StringNotNullOrEmptyConverter}}" />
+
             <Frame Margin="10" HeightRequest="{Binding IsDepartureExpanded, Converter={StaticResource ExpandedToHeightConverter}}">
                 <StackLayout>
                     <HorizontalStackLayout Spacing="10">
